Added one resume txt file

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <metan charset="UFT-8">
-        <title>Resume of Cody Fredrickson</title>
+        <title>Resume of Tony Alicea</title>
     </head>
     <body>
+        <article>
+
+        </article>
         
     </body>
 </html>
