Added the h1..h3 markups

--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
         <title>Resume of Cody Fredrickson</title>
     </head>
     <body>
-        Resume
+        <h1>Resume</h1>
         <section>
-            Cody Fredrickson
+            <h2>Cody Fredrickson</h2>
             San Antonio, TX | 210-555-0196 | cfredrickson@email.com
         </section>
+
         <article>
-            Summary
-            Detail-oriented Java Developer with over 10 years of experience in developing high-quality websites that focus on positive end-user experiences. Knowledgeable in several programming languages and design techniques that foster a productive work environment.
+            <h3>Summary</h3>
+            Detail-oriented Java Developer with over 10 years of experience in developing high-quality websites that focus on positive end-user experiences. Knowledgeable in several programming languages and design techniques that foster a productive work environment. <aside>Passioned in creating fun contents!</aside>
         </article>
+
         <section>
-            Education
+            <h3>Education</h3>
             Green Valley University
             Master's in computer information systems
         </section>
+
         <section>
-            Experience
+            <h3>Experience</h3>
             Crane & Jenkins Technology | San Antonio, TX, Java Developer
             July 2015 - Current
             Develop user interfaces with Backbone JS Framework
@@ -34,14 +37,16 @@
             Developed high-quality code to enhance user experiences
             Audited published code to identify and correct any errors
         </section>
+
         <section>
-            Certifications
+            <h3>Certifications</h3>
             Oracle Certified Professional Java Programmer
             Spring Professional
             Professional Scrum Master
         </section>
+
         <section>
-            Skills
+            <h3>Skills</h3>
             Code testing
             Debugging
             Web technologies
