Added Address markups

--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
         </section>
 
         <article>
-            <h3>Summary</h3>
+            <header>
+                <h3>Summary</h3>
+            </header>
             Detail-oriented Java Developer with over 10 years of experience in developing high-quality websites that focus on positive end-user experiences. Knowledgeable in several programming languages and design techniques that foster a productive work environment. <aside>Passioned in creating fun contents!</aside>
+            <footer>
+                Contact me  
+            </footer>
         </article>
 
         <section>
@@ -53,6 +58,14 @@
             Attention to detail
             Programming languages
             Communication
+        </section>
+
+        <section>
+            <h3>Mailing Addres</h3>
+            <address>
+                111 Somewhere St.
+                Somewhere, ON M6Y 1LP
+            </address>
         </section>
         
     </body>
