--- a/index.html
+++ b/index.html
@@ -1,72 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <metan charset="UFT-8">
+
+<head>
+    <metan charset="UFT-8">
         <title>Resume of Cody Fredrickson</title>
-    </head>
-    <body>
-        <h1>Resume</h1>
-        <section>
-            <h2>Cody Fredrickson</h2>
+</head>
+
+<body>
+    <h1>Resume</h1>
+    <section>
+        <h2>Cody Fredrickson</h2>
+        <p>
             San Antonio, TX | 210-555-0196 | cfredrickson@email.com
-        </section>
+        </p>
+    </section>
 
-        <article>
-            <header>
-                <h3>Summary</h3>
-            </header>
-            Detail-oriented Java Developer with over 10 years of experience in developing high-quality websites that focus on positive end-user experiences. Knowledgeable in several programming languages and design techniques that foster a productive work environment. <aside>Passioned in creating fun contents!</aside>
-            <footer>
-                Contact me  
-            </footer>
-        </article>
+    <article>
+        <header>
+            <h3>Summary</h3>
+        </header>
+        <p>
+            Detail-oriented Java Developer with over 10 years of experience in developing high-quality websites that
+            focus on positive end-user experiences. Knowledgeable in several programming languages and design techniques
+            that foster a productive work environment. <aside>Passioned in creating fun contents!</aside>
+        </p>
+        <footer>
+            Contact me
+        </footer>
+    </article>
 
-        <section>
-            <h3>Education</h3>
-            Green Valley University
-            Master's in computer information systems
-        </section>
+    <section>
+        <h3>Education</h3>
+        <p>Green Valley University</p>
+        <p>Master's in computer information systems</p>
+    </section>
 
-        <section>
-            <h3>Experience</h3>
+    <section>
+        <h3>Experience</h3>
+        <p>
             Crane & Jenkins Technology | San Antonio, TX, Java Developer
             July 2015 - Current
             Develop user interfaces with Backbone JS Framework
             Review website performance reports to identify improvement opportunities
             Write high-quality code that incorporates industry security best practices and customer requirements
             Implement new website code with less than 5% downtime
+        </p>
+        <p>
             Analyze customer feedback upon change implementation to determine customer satisfaction
             OceanRiver Technology Group | San Antonio, TX, Java Developer
             May 2011 - July 2015
             Collected data from different search engines and other sources to analyze website performance
             Developed high-quality code to enhance user experiences
             Audited published code to identify and correct any errors
-        </section>
+        </p>
+    </section>
 
-        <section>
-            <h3>Certifications</h3>
-            Oracle Certified Professional Java Programmer
-            Spring Professional
-            Professional Scrum Master
-        </section>
+    <section>
+        <h3>Certifications</h3>
+        <p>Oracle Certified Professional Java Programmer</p>
+        <p>Spring Professional</p>
+        <p>Professional Scrum Master</p>    
+    </section>
 
-        <section>
-            <h3>Skills</h3>
-            Code testing
-            Debugging
-            Web technologies
-            Attention to detail
-            Programming languages
-            Communication
-        </section>
+    <section>
+        <h3>Skills</h3>
+        </p>Code testing</p>
+        <p>Web technologies</p>
+        <p>Attention to detail</p>
+        <p>Programming languages</p>
+        <p>Communication</p>
+    </section>
 
-        <section>
-            <h3>Mailing Addres</h3>
-            <address>
-                111 Somewhere St.
-                Somewhere, ON M6Y 1LP
-            </address>
-        </section>
-        
-    </body>
+    <section>
+        <h3>Mailing Addres</h3>
+        <address>
+            111 Somewhere St.
+            Somewhere, ON M6Y 1LP
+        </address>
+    </section>
+
+</body>
+
 </html>
