--- a/index.html
+++ b/index.html
@@ -57,18 +57,22 @@
 
     <section>
         <h3>Certifications</h3>
-        <p>Oracle Certified Professional Java Programmer</p>
-        <p>Spring Professional</p>
-        <p>Professional Scrum Master</p>    
+        <ul>
+            <li>Oracle Certified Professional Java Programmer</li>
+            <li>Spring Professional</li>
+            <li >Professional Scrum Master</li>
+        </ul>    
     </section>
 
     <section>
         <h3>Skills</h3>
-        </p>Code testing</p>
-        <p>Web technologies</p>
-        <p>Attention to detail</p>
-        <p>Programming languages</p>
-        <p>Communication</p>
+        <ul>
+            <li>Code testing</li>
+            <li>Web technologies</li>
+            <li>Attention to detail</li>
+            <li>Programming languages</li>
+            <li>Communication</li>
+        </ul>
     </section>
 
     <section>
