Replaced <p> for <ol><li>

--- a/index.html
+++ b/index.html
@@ -31,28 +31,36 @@
 
     <section>
         <h3>Education</h3>
-        <p>Green Valley University</p>
-        <p>Master's in computer information systems</p>
+        <ol reversed>
+            <li>Green Valley University</li>
+            <li>Master's in computer information systems</li>
+        </ol>
     </section>
 
     <section>
         <h3>Experience</h3>
-        <p>
-            Crane & Jenkins Technology | San Antonio, TX, Java Developer
-            July 2015 - Current
-            Develop user interfaces with Backbone JS Framework
-            Review website performance reports to identify improvement opportunities
-            Write high-quality code that incorporates industry security best practices and customer requirements
-            Implement new website code with less than 5% downtime
-        </p>
-        <p>
-            Analyze customer feedback upon change implementation to determine customer satisfaction
-            OceanRiver Technology Group | San Antonio, TX, Java Developer
-            May 2011 - July 2015
-            Collected data from different search engines and other sources to analyze website performance
-            Developed high-quality code to enhance user experiences
-            Audited published code to identify and correct any errors
-        </p>
+        <ol reversed>
+            <li>
+                Crane & Jenkins Technology | San Antonio, TX, Java Developer
+                July 2015 - Current
+                <p>
+                    Develop user interfaces with Backbone JS Framework
+                    Review website performance reports to identify improvement opportunities
+                    Write high-quality code that incorporates industry security best practices and customer requirements
+                    Implement new website code with less than 5% downtime
+                    Analyze customer feedback upon change implementation to determine customer satisfaction
+                </p>
+            </li>
+            <li>
+                OceanRiver Technology Group | San Antonio, TX, Java Developer
+                May 2011 - July 2015
+                <p>
+                    Collected data from different search engines and other sources to analyze website performance
+                    Developed high-quality code to enhance user experiences
+                    Audited published code to identify and correct any errors
+                </p>
+            </li>
+        </ol>
     </section>
 
     <section>
