Implemented DL,DT, DD

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <section>
         <h2>Cody Fredrickson</h2>
         <p>
-            San Antonio, TX | 210-555-0196 | cfredrickson@email.com
+            <dl>
+                <dt>Phone:</dt> 
+                <dd>210-555-0196</dd> 
+                <dt>E-mail:</dt> 
+                <dd>cfredrickson@email.com</dd>
+            </dl>
         </p>
     </section>
 
