Replaced description list (DL,DT, DD) for a table format (table, TR,TD)

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
     <h1>Resume</h1>
     <section>
         <h2>Cody Fredrickson</h2>
-        <dl>
-            <dt>Phone:</dt> 
-            <dd>210-555-0196</dd> 
-            <dt>E-mail:</dt> 
-            <dd>cfredrickson@email.com</dd>
-        </dl>
+        <table>
+            <tr>
+                <td>San Antonio, TX </td>
+                <td>210-555-0196</td> 
+                <td>cfredrickson@email.com</td>
+            </tr>
+        </table>
         </p>
     </section>
 
