Added emphasis tag

--- a/index.html
+++ b/index.html
@@ -1,101 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <metan charset="UFT-8">
-        <title>Resume of Cody Fredrickson</title>
-</head>
+    <head>
+        <metan charset="UFT-8">
+            <title>Resume of Cody Fredrickson</title>
+    </head>
 
-<body>
-    <h1>Resume</h1>
-    <section>
-        <h2>Cody Fredrickson</h2>
-        <table>
-            <tr>
-                <td>San Antonio, TX </td>
-                <td>210-555-0196</td> 
-                <td>cfredrickson@email.com</td>
-            </tr>
-        </table>
-        </p>
-    </section>
-
-    <article>
-        <header>
-            <h3>Summary</h3>
-        </header>
-        <p>
-            Detail-oriented Java Developer with over 10 years of experience in developing high-quality websites that
-            focus on positive end-user experiences. Knowledgeable in several programming languages and design techniques
-            that foster a productive work environment. <aside>Passioned in creating fun contents!</aside>
-        </p>
-        <footer>
-            Contact me
-        </footer>
-    </article>
-
-    <section>
-        <h3>Education</h3>
-        <ol reversed>
-            <li>Green Valley University</li>
-            <li>Master's in computer information systems</li>
-        </ol>
-    </section>
-
-    <section>
-        <h3>Experience</h3>
-        <ol reversed>
-            <li>
-                Crane & Jenkins Technology | San Antonio, TX, Java Developer
-                July 2015 - Current
-                <p>
-                    Develop user interfaces with Backbone JS Framework
-                    Review website performance reports to identify improvement opportunities
-                    Write high-quality code that incorporates industry security best practices and customer requirements
-                    Implement new website code with less than 5% downtime
-                    Analyze customer feedback upon change implementation to determine customer satisfaction
+    <body>
+        <main>
+            <h1>Resume</h1>
+            <section>
+                <h2>Cody Fredrickson</h2>
+                <table>
+                    <tr>
+                        <td>San Antonio, TX</td>
+                        <td>210-555-0196</td> 
+                        <td>cfredrickson@email.com</td>
+                    </tr>
+                </table>
                 </p>
-            </li>
-            <li>
-                OceanRiver Technology Group | San Antonio, TX, Java Developer
-                May 2011 - July 2015
+            </section>
+
+            <article>
+                <header>
+                    <h3>Summary</h3>
+                </header>
                 <p>
-                    Collected data from different search engines and other sources to analyze website performance
-                    Developed high-quality code to enhance user experiences
-                    Audited published code to identify and correct any errors
+                    Detail-oriented Java Developer with over <em>10 years of experience</em> in developing high-quality websites that
+                    focus on positive end-user experiences. Knowledgeable in several programming languages and design techniques
+                    that foster a <em>productive</em> work environment. <aside>Passioned in creating contents!</aside>
                 </p>
-            </li>
-        </ol>
-    </section>
+                <footer>
+                    Contact me
+                </footer>
+            </article>
 
-    <section>
-        <h3>Certifications</h3>
-        <ul>
-            <li>Oracle Certified Professional Java Programmer</li>
-            <li>Spring Professional</li>
-            <li >Professional Scrum Master</li>
-        </ul>    
-    </section>
+            <section>
+                <h3>Education</h3>
+                <ol reversed>
+                    <li>Green Valley University</li>
+                    <li>Master's in computer information systems</li>
+                </ol>
+            </section>
 
-    <section>
-        <h3>Skills</h3>
-        <ul>
-            <li>Code testing</li>
-            <li>Web technologies</li>
-            <li>Attention to detail</li>
-            <li>Programming languages</li>
-            <li>Communication</li>
-        </ul>
-    </section>
+            <section>
+                <h3>Experience</h3>
+                <ol reversed>
+                    <li>
+                        Crane & Jenkins Technology | San Antonio, TX, Java Developer
+                        July 2015 - Current
+                        <p>
+                            Develop user interfaces with Backbone JS Framework
+                            Review website performance reports to identify improvement opportunities
+                            Write high-quality code that incorporates industry security best practices and customer requirements
+                            Implement new website code with less than 5% downtime
+                            Analyze customer feedback upon change implementation to determine customer satisfaction
+                        </p>
+                    </li>
+                    <li>
+                        OceanRiver Technology Group | San Antonio, TX, Java Developer
+                        May 2011 - July 2015
+                        <p>
+                            Collected data from different search engines and other sources to analyze website performance
+                            Developed high-quality code to enhance user experiences
+                            Audited published code to identify and correct any errors
+                        </p>
+                    </li>
+                </ol>
+            </section>
 
-    <section>
-        <h3>Mailing Addres</h3>
-        <address>
-            111 Somewhere St.
-            Somewhere, ON M6Y 1LP
-        </address>
-    </section>
+            <section>
+                <h3>Certifications</h3>
+                <ul>
+                    <li>Oracle Certified Professional Java Programmer</li>
+                    <li>Spring Professional</li>
+                    <li >Professional Scrum Master</li>
+                </ul>    
+            </section>
 
-</body>
+            <section>
+                <h3>Skills</h3>
+                <ul>
+                    <li>Code testing</li>
+                    <li>Web technologies</li>
+                    <li>Attention to detail</li>
+                    <li>Programming languages</li>
+                    <li>Communication</li>
+                </ul>
+            </section>
 
+            <section>
+                <h3>Mailing Addres</h3>
+                <address>
+                    111 Somewhere St.
+                    Somewhere, ON M6Y 1LP
+                </address>
+            </section>
+        </main>
+    </body>
 </html>
