Added comment markup and break lines

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    <!-- Comment markup in HTML -->
     <head>
         <metan charset="UFT-8">
             <title>Resume of Cody Fredrickson</title>
@@ -13,9 +13,9 @@
                 <h2>Cody Fredrickson</h2>
                 <table>
                     <tr>
-                        <td>San Antonio, TX</td>
-                        <td>210-555-0196</td> 
-                        <td>cfredrickson@email.com</td>
+                        <td><b>San Antonio, TX</b></td>
+                        <td><b>210-555-0196</b></td> 
+                        <td><b>cfredrickson@email.com</b></td>
                     </tr>
                 </table>
                 </p>
@@ -28,7 +28,7 @@
                 <p>
                     Detail-oriented Java Developer with over <em>10 years of experience</em> in developing high-quality websites that
                     focus on positive end-user experiences. Knowledgeable in several programming languages and design techniques
-                    that foster a <em>productive</em> work environment. <aside>Passioned in creating contents!</aside>
+                    that foster a <em>productive</em> work environment. <aside><small>Passioned in creating contents!</small></aside>
                 </p>
                 <footer>
                     Contact me
@@ -50,10 +50,10 @@
                         Crane & Jenkins Technology | San Antonio, TX, Java Developer
                         July 2015 - Current
                         <p>
-                            Develop user interfaces with Backbone JS Framework
-                            Review website performance reports to identify improvement opportunities
-                            Write high-quality code that incorporates industry security best practices and customer requirements
-                            Implement new website code with less than 5% downtime
+                            Develop user interfaces with Backbone JS Framework <br />
+                            Review website performance reports to identify improvement opportunities <br />
+                            Write high-quality code that incorporates industry security best practices and customer requirements <br />
+                            Implement new website code with less than 5% downtime <br />
                             Analyze customer feedback upon change implementation to determine customer satisfaction
                         </p>
                     </li>
@@ -61,9 +61,9 @@
                         OceanRiver Technology Group | San Antonio, TX, Java Developer
                         May 2011 - July 2015
                         <p>
-                            Collected data from different search engines and other sources to analyze website performance
-                            Developed high-quality code to enhance user experiences
-                            Audited published code to identify and correct any errors
+                            Collected data from different search engines and other sources to analyze website performance <br />
+                            Developed high-quality code to enhance user experiences <br />
+                            Audited published code to identify and correct any errors <br />
                         </p>
                     </li>
                 </ol>
@@ -92,7 +92,7 @@
             <section>
                 <h3>Mailing Addres</h3>
                 <address>
-                    111 Somewhere St.
+                    111 Somewhere St. <br />
                     Somewhere, ON M6Y 1LP
                 </address>
             </section>
