--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 <h2>Cody Fredrickson</h2>
                 <table>
                     <tr>
-                        <td><b>San Antonio, TX</b></td>
                         <td><b>210-555-0196</b></td> 
-                        <td><b>cfredrickson@email.com</b></td>
+                        <td><a href="cfredrickson@email.com">cfredrickson@email.com</a></td>
+                        <td><a href="https://www.linkedin.com/in/prycila-c-400a00182">linkedin.com/prycila</a></td>
                     </tr>
                 </table>
                 </p>
