Anchor target attribute

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <tr>
                         <td><b>210-555-0196</b></td> 
                         <td><a href="cfredrickson@email.com">cfredrickson@email.com</a></td>
-                        <td><a href="https://www.linkedin.com/in/prycila-c-400a00182">linkedin.com/prycila</a></td>
+                        <td><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com/prycila</a></td>
                     </tr>
                 </table>
                 </p>
