Added named-character-references <>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <main>
             <h1>Resume</h1>
             <section>
-                <h2>Cody Fredrickson</h2>
+                <h2>Cody &lt; Fredrickson &gt;</h2>
                 <table>
                     <tr>
                         <td><b>210-555-0196</b></td> 
@@ -18,7 +18,6 @@
                         <td><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com/prycila</a></td>
                     </tr>
                 </table>
-                </p>
             </section>
 
             <article>
