Added space - Named character references

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
         <main>
             <h1>Resume</h1>
             <section>
-                <h2>Cody &lt; Fredrickson &gt;</h2>
+                <h2>Cody Fredrickson;</h2>
                 <table>
                     <tr>
-                        <td><b>210-555-0196</b></td> 
-                        <td><a href="cfredrickson@email.com">cfredrickson@email.com</a></td>
+                        <td><b>210-555-0196</b>&ThickSpace;&ThickSpace;</td> 
+                        <td><a href="cfredrickson@email.com">cfredrickson@email.com</a>&ThickSpace;&ThickSpace;</td>
                         <td><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com/prycila</a></td>
                     </tr>
                 </table>
