Added ID to my resume sections

--- a/index.html
+++ b/index.html
@@ -9,18 +9,18 @@
     <body>
         <main>
             <h1>Resume</h1>
-            <section>
-                <h2>Cody Fredrickson;</h2>
+            <section id="mycontact">
+                <h2>Cody Fredrickson</h2>
                 <table>
                     <tr>
                         <td><b>210-555-0196</b>&ThickSpace;&ThickSpace;</td> 
-                        <td><a href="cfredrickson@email.com">cfredrickson@email.com</a>&ThickSpace;&ThickSpace;</td>
-                        <td><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com/prycila</a></td>
+                        <td><b><a href="cfredrickson@email.com">cfredrickson@email.com</a>&ThickSpace;&ThickSpace;</b></td>
+                        <td><strong><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com/prycila</a></strong></td>
                     </tr>
                 </table>
             </section>
 
-            <article>
+            <article id="aboutme">
                 <header>
                     <h3>Summary</h3>
                 </header>
@@ -34,7 +34,7 @@
                 </footer>
             </article>
 
-            <section>
+            <section id="education">
                 <h3>Education</h3>
                 <ol reversed>
                     <li>Green Valley University</li>
@@ -42,7 +42,7 @@
                 </ol>
             </section>
 
-            <section>
+            <section id="experience">
                 <h3>Experience</h3>
                 <ol reversed>
                     <li>
@@ -68,7 +68,7 @@
                 </ol>
             </section>
 
-            <section>
+            <section id="certification">
                 <h3>Certifications</h3>
                 <ul>
                     <li>Oracle Certified Professional Java Programmer</li>
@@ -77,7 +77,7 @@
                 </ul>    
             </section>
 
-            <section>
+            <section id="skill">
                 <h3>Skills</h3>
                 <ul>
                     <li>Code testing</li>
@@ -88,7 +88,7 @@
                 </ul>
             </section>
 
-            <section>
+            <section id="mailaddress">
                 <h3>Mailing Addres</h3>
                 <address>
                     111 Somewhere St. <br />
