--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     </head>
 
     <body>
+        <section>
+            <ul>
+                <li><a href="#mycontact">Contact</a></li>
+                <li><a href="#aboutme">About Me</a></li>
+                <li><a href="#education">Education</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#certification">Certifications</a></li>
+                <li><a href="#skill">Skills</a></li>
+                <li><a href="#mailaddress">Mainling Address</a></li>
+            </ul>
+        </section>
         <main>
             <h1>Resume</h1>
             <section id="mycontact">
@@ -14,7 +25,7 @@
                 <table>
                     <tr>
                         <td><b>210-555-0196</b>&ThickSpace;&ThickSpace;</td> 
-                        <td><b><a href="cfredrickson@email.com">cfredrickson@email.com</a>&ThickSpace;&ThickSpace;</b></td>
+                        <td><b>cfredrickson@email.com</a>&ThickSpace;&ThickSpace;</b></td>
                         <td><strong><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com/prycila</a></strong></td>
                     </tr>
                 </table>
