added github link and renamed the Mailing Address

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#certification">Certifications</a></li>
                 <li><a href="#skill">Skills</a></li>
-                <li><a href="#mailaddress">Mainling Address</a></li>
+                <li><a href="#mailaddress">Mailing Address</a></li>
             </ul>
         </section>
         <main>
@@ -26,7 +26,8 @@
                     <tr>
                         <td><b>210-555-0196</b>&ThickSpace;&ThickSpace;</td> 
                         <td><b>cfredrickson@email.com</a>&ThickSpace;&ThickSpace;</b></td>
-                        <td><strong><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com/prycila</a></strong></td>
+                        <td><strong><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com</a></strong>&ThickSpace;&ThickSpace;</td>
+                        <td><strong><a href="https://github.com/PrycilaCerqueira" target="_blank">github.com</a></strong></td>
                     </tr>
                 </table>
             </section>
