Replaced Section for Navagation <nav>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
     <body>
-        <section>
+        <nav>
             <ul>
                 <li><a href="#mycontact">Contact</a></li>
                 <li><a href="#aboutme">About Me</a></li>
@@ -17,7 +17,7 @@
                 <li><a href="#skill">Skills</a></li>
                 <li><a href="#mailaddress">Mailing Address</a></li>
             </ul>
-        </section>
+        </nav>
         <main>
             <h1>Resume</h1>
             <section id="mycontact">
