Adjusting the form visually

--- a/index.html
+++ b/index.html
@@ -107,6 +107,26 @@
                     Somewhere, ON M6Y 1LP
                 </address>
             </section>
+
+            <section id="contactme">
+                <h3>Contact Me</h3>
+                <form action="formaction.html" method="post">
+                    <p>
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" required/>
+                    </p>
+                    
+                    <p>
+                        <label for="email">E-mail</label>
+                        <input type="email" id="email" name="email" required/>
+                    </p>
+
+                    <p>
+                        <button type="submit">Send</button>
+                    </p>
+                </form>
+
+            </section>
         </main>
     </body>
 </html>
