Added Radio, Checkbox, and Select Elements

--- a/index.html
+++ b/index.html
@@ -122,6 +122,39 @@
                     </p>
 
                     <p>
+                        <label for="whycontacting">Why Contacting</label>
+                        <select name="whycontacting" id="whycontacting">
+                            <option value="jobinterview">Job Interview</option>
+                            <option value="freelancer">Freelancer</option>
+                        </select>
+                    </p>
+
+                    <p>
+                        <label for="comments">Comments</label>
+                        <textarea name="comments" id="comments" cols="60" rows="3"></textarea>
+                    </p>
+
+                    <p>
+                        <label for="contacttime1">Morning</label>
+                        <input type="radio" name="contacttime" id="contacttime1" value="morning">
+                    </p>
+
+                    <p>
+                        <label for="contacttime2">Afternoon</label>
+                        <input type="radio" name="contacttime" id="contacttime2" value="afternoon">
+                    </p>
+
+                    <p>
+                        <label for="contacttime3">Evening</label>
+                        <input type="radio" name="contacttime" id="contacttime3" value="evening">
+                    </p>
+
+                    <p>
+                        <label for="asap">ASAP</label>
+                        <input type="checkbox" name="asap" id="asap">
+                    </p>
+                    
+                    <p>
                         <button type="submit">Send</button>
                     </p>
                 </form>
