Created a CSS file and linked the HTML to it

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <metan charset="UFT-8">
             <title>Resume of Cody Fredrickson</title>
+            <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
@@ -134,26 +135,29 @@
                         <textarea name="comments" id="comments" cols="60" rows="3"></textarea>
                     </p>
 
-                    <p>
-                        <label for="contacttime1">Morning</label>
-                        <input type="radio" name="contacttime" id="contacttime1" value="morning">
-                    </p>
+                    <fieldset>
+                        <legend>Best Contact Time</legend>
+                        <p>
+                            <label for="contacttime1">Morning</label>
+                            <input type="radio" name="contacttime" id="contacttime1" value="morning">
+                        </p>
 
-                    <p>
-                        <label for="contacttime2">Afternoon</label>
-                        <input type="radio" name="contacttime" id="contacttime2" value="afternoon">
-                    </p>
+                        <p>
+                            <label for="contacttime2">Afternoon</label>
+                            <input type="radio" name="contacttime" id="contacttime2" value="afternoon">
+                        </p>
 
-                    <p>
-                        <label for="contacttime3">Evening</label>
-                        <input type="radio" name="contacttime" id="contacttime3" value="evening">
-                    </p>
+                        <p>
+                            <label for="contacttime3">Evening</label>
+                            <input type="radio" name="contacttime" id="contacttime3" value="evening">
+                        </p>
 
-                    <p>
-                        <label for="asap">ASAP</label>
-                        <input type="checkbox" name="asap" id="asap">
-                    </p>
-                    
+                        <p>
+                            <label for="asap">ASAP</label>
+                            <input type="checkbox" name="asap" id="asap">
+                        </p>
+                    </fieldset>
+
                     <p>
                         <button type="submit">Send</button>
                     </p>
