Reversed the table tag in mycontact section to association list <dl>

--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
             <h1>Resume</h1>
             <section id="mycontact">
                 <h2>Cody Fredrickson</h2>
-                <table>
-                    <tr>
-                        <td><b>210-555-0196</b>&ThickSpace;&ThickSpace;</td> 
-                        <td><b>cfredrickson@email.com</a>&ThickSpace;&ThickSpace;</b></td>
-                        <td><strong><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com</a></strong>&ThickSpace;&ThickSpace;</td>
-                        <td><strong><a href="https://github.com/PrycilaCerqueira" target="_blank">github.com</a></strong></td>
-                    </tr>
-                </table>
+                <dl>
+                    <dt>Phone</dt>
+                    <dd><b>210-555-0196</b></dd> 
+                    <dt>E-mail</dt>    
+                    <dd><b>cfredrickson@email.com</a></b></dd>
+                    <dt>LinkdIn</dt>
+                    <dd><strong><a href="https://www.linkedin.com/in/prycila-c-400a00182" target="_blank">linkedin.com</a></strong></dd>
+                    <dt>GitHub</dt>
+                    <dd><strong><a href="https://github.com/PrycilaCerqueira" target="_blank">github.com</a></strong></dd>
+                    
+                </dl>
             </section>
 
             <article id="aboutme">
