Style HTML based on attribute selector [lang]

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             <section id="skill">
                 <h3>Skills</h3>
                 <ul>
-                    <li>Code testing</li>
-                    <li>Web technologies</li>
+                    <li lang="pt">Code testing</li>
+                    <li lang="es">Web technologies</li>
                     <li>Attention to detail</li>
                     <li>Programming languages</li>
                     <li>Communication</li>
