Until the equals css selector att~=val applied as well as the multi classing

--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
 
             <section id="skill">
                 <h3>Skills</h3>
-                <ul>
-                    <li lang="pt">Code testing</li>
-                    <li lang="es">Web technologies</li>
+                <ul class="resume-skills resume-lists skills-list">
+                    <li>Code testing</li>
+                    <li>Web technologies</li>
                     <li>Attention to detail</li>
                     <li>Programming languages</li>
                     <li>Communication</li>
