Class tag for unordered list and styling them

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
             <section id="certification">
                 <h3>Certifications</h3>
-                <ul>
+                <ul class="resume-unordered-lists">
                     <li>Oracle Certified Professional Java Programmer</li>
                     <li>Spring Professional</li>
                     <li >Professional Scrum Master</li>
@@ -94,7 +94,7 @@
 
             <section id="skill">
                 <h3>Skills</h3>
-                <ul class="resume-skills resume-lists skills-list">
+                <ul class="resume-skills resume-unordered-lists skills-list">
                     <li>Code testing</li>
                     <li>Web technologies</li>
                     <li>Attention to detail</li>
