Created a pseudo-classes :is()

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </footer>
             </article>
 
-            <section id="education">
+            <section id="education resume-list">
                 <h3>Education</h3>
                 <ol reversed>
                     <li>Green Valley University</li>
@@ -57,7 +57,7 @@
                 </ol>
             </section>
 
-            <section id="experience">
+            <section id="experience resume-list">
                 <h3>Experience</h3>
                 <ol reversed>
                     <li>
@@ -83,7 +83,7 @@
                 </ol>
             </section>
 
-            <section id="certification">
+            <section id="certification resume-list">
                 <h3>Certifications</h3>
                 <ul class="resume-unordered-lists">
                     <li>Oracle Certified Professional Java Programmer</li>
@@ -92,7 +92,7 @@
                 </ul>    
             </section>
 
-            <section id="skill">
+            <section id="skill resume-list">
                 <h3>Skills</h3>
                 <ul class="resume-skills resume-unordered-lists skills-list">
                     <li>Code testing</li>
