--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <h1>Resume</h1>
             <section id="mycontact">
                 <h2>Cody Fredrickson</h2>
+                <img src="C:\Users\pry_p\source\repos\P8_Resume">
                 <dl>
                     <dt>Phone</dt>
                     <dd><b>210-555-0196</b></dd> 
