Created a img folder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h1>Resume</h1>
             <section id="mycontact">
                 <h2>Cody Fredrickson</h2>
-                <img src="" alt="Resume backgoroud image" id="resume-backgroud-img">
+                <img src="img/pexels-markus-spiske-965345.jpg alt="Resume backgoroud image" id="resume-backgroud-img">
                 <dl>
                     <dt>Phone</dt>
                     <dd><b>210-555-0196</b></dd> 
