Float image element

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <h1>Resume</h1>
             <section id="mycontact">
                 <h2>Cody Fredrickson</h2>
-                <img src="img/pexels-markus-spiske-965345.jpg alt="Resume backgoroud image" id="resume-backgroud-img">
-                <dl>
+                <img src="img/pexels-markus-winkler-4578665.jpg" alt="Resume backgoroud image" id="resume-backgroud-img">
+                <dl class="personal-info">
                     <dt>Phone</dt>
                     <dd><b>210-555-0196</b></dd> 
                     <dt>E-mail</dt>    
